frontend/test/should_fail/computations_no_exec.grg
test t()
{
}

bar() : int
{
	exec( t() ); // no exec in function
	return(42);
}
